flow testing